--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "version": "npm run build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "prepare": "yarn build || npm run build"
   },
   "repository": {
     "type": "git",
